--- a/templates/csv.html
+++ b/templates/csv.html
@@ -49,7 +49,7 @@
         </form>
 
         <div class="container mt-5">
-            <a href="" download>
+            <a href="https://raw.githubusercontent.com/AjayJangid17/CSV_Uploader/master/Csv_task.csv" download>
                 <input type="button" value="Download Sample">
             </a>
         </div>
